[package]
name = "imx-vpuwrap-sys"
version = "0.1.0"
description = "Low-level bindings for imx-vpuwrap library."
authors = ["Philip Ye <yestyle@gmail.com>"]
edition = "2021"
license = "MIT"
categories = [
    "api-bindings",
    "multimedia::video",
]
keywords = [
    "NXP",
    "VPU",
    "wrapper",
    "video",
]
repository = "https://github.com/yestyle/imx-vpuwrap-sys"
homepage = "https://github.com/yestyle/imx-vpuwrap-sys"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
